@@ -1,12 +1,18 @@
 # vim: set noexpandtab:
+
+2013-01-17 Steve
+	* Adding grl command line option to NtMaker
+	* Updated default grl to Moriond version
+	* Tagging SusyCommon-00-00-52
+
 2013-01-16 Matt
 	* Added 'smart veto' back to event flags
 	* Added bch_corr_jet to jet class
 	* Update muon variables for id and ms (not me) after email with Beate
-	
+
 2013-01-15 Matt
 	* Added qoverp for id and me
-	
+
 2013-01-14 Steve
 	* Tagging SusyCommon-00-00-51
 
